[package]
name = "td"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"]}
dirs = "6.0.0"
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }